0.24-SNAPSHOT
-------------
TBD

0.23
----
Enhancements:
* Upgraded ribbon client: https://github.com/Netflix/genie/issues/45
* Patterns for cluster name/id searches: https://github.com/Netflix/genie/issues/46

Bug fixes:
* Issue #3: https://github.com/Netflix/genie/commit/54833b313a87afa3083f767003b1017de815890c

0.22
----
Enhancements:
* Email notifications for jobs: https://github.com/Netflix/genie/issues/3
* Bootstrap action for EMR: https://github.com/Netflix/genie/issues/9
* Parameter to disable log archiving: https://github.com/Netflix/genie/issues/17
* Arquillian-based integration tests: https://github.com/Netflix/genie/issues/18
* Caching for Servo metrics: https://github.com/Netflix/genie/issues/21
* Refactor of persistence and metrics classes: https://github.com/Netflix/genie/issues/25
* Updating cluster status from Genie web console: https://github.com/Netflix/genie/issues/27
* Specifying file dependencies as attachments: https://github.com/Netflix/genie/issues/28
* REST API to filter jobs by cluster name and ID: https://github.com/Netflix/genie/issues/29
* Lipstick integration: https://github.com/Netflix/genie/issues/32
* Better host name resolution on AWS: https://github.com/Netflix/genie/issues/34
* Optimizing kills for finished jobs: https://github.com/Netflix/genie/issues/37
* More Generic Eureka support for Python client: https://github.com/Netflix/genie/issues/38

Bug fixes:
* Scheduling bug when clusterName/ID are empty strings: https://github.com/Netflix/genie/issues/20
* NPE when clients send null jobInfo during job submission: https://github.com/Netflix/genie/issues/40
* Client connection leak: https://github.com/Netflix/genie/issues/43

0.21
----
Enhancements:
* Optional limits for stdout/stderr: https://github.com/Netflix/genie/issues/8
* Updated Genie web console: https://github.com/Netflix/genie/issues/14

Bug fixes:
* File dependency copy failure: https://github.com/Netflix/genie/issues/5