@@ -42,6 +42,12 @@
         </div>
     </div>
     <div class="control-group">
+        <label class="control-label">Cluster Name:</label>
+        <div class="controls">
+            <input type="text" name="clusterName" class="input-large">
+        </div>
+    </div>
+    <div class="control-group">
         <label class="control-label">Number of jobs:</label>
         <div class="controls">
             <input type="text" name="limit" class="input-mini" maxlength=3 value="32">
