@@ -1,6 +1,7 @@
 0.24-SNAPSHOT
 -------------
-TBD
+* Job search using cluster name for Genie console: https://github.com/Netflix/genie/issues/51
+
 
 0.23
 ----
